# server/controllers/tarefaController.js
@@ -2,12 +2,13 @@ const conexao = require('../config/conexao');
 
 exports.listarTodos = (req, res) => {
 
-  const query = 'select * from tarefas order by id desc';
+  const query = 'select * from tarefas order by data asc';
   conexao.query(query, (err, rows) => {
     if (err){
+      console.log(err);
       res.status(500);
       res.json({
-        message: "Internal Server Erro"
+        message: "Internal Server Error"
       });
     } else if (rows.length > 0){
       res.status(200);
@@ -26,9 +27,10 @@ exports.listarPorDescricao = (req, res) => {
   let descricao = req.params.descricao || "";
   descricao = "%" + descricao + "%";
   
-  const query = 'select * from tarefas where descricao like ? order by id desc';
+  const query = 'select * from tarefas where descricao like ? order by data asc';
   conexao.query(query, [descricao], (err, rows) => {
     if (err){
+      console.log(err);
       res.status(500);
       res.json({
         message: "Internal Server Error"
@@ -45,6 +47,45 @@ exports.listarPorDescricao = (req, res) => {
   });
 }
 
+exports.listarPorDescricaoPaginado = (req, res) => {
+
+  const pagina = req.params.pagina || '1';
+  let descricao = req.params.descricao || "";
+  descricao = "%" + descricao + "%";
+
+  // Quantidade de items por página
+  const itemsPorPagina = 5;
+  
+  // Determinando a quantidade de tarefas cadastradas
+  const queryCount = 'select count(*) as contador from tarefas';
+  conexao.query(queryCount, (err, rows) => {
+    const qtdPaginas = rows[0].contador / itemsPorPagina;
+  });
+
+  // Definindo o fim e o inicio da paginação
+  const fim = (itemsPorPagina * pagina) - 1;
+  const inicio = fim - 4;
+
+  const query = 'select * from tarefas where descricao like ? order by data asc limit ?,?';
+  conexao.query(query, [descricao, inicio, fim], (err, rows) => {
+    if (err){
+      console.log(err);
+      res.status(500);
+      res.json({
+        message: "Internal Server Error"
+      });
+    } else if (rows.length > 0){
+      res.status(200);
+      res.json(rows)
+    } else {
+      res.status(404);
+      res.json({
+        message: "Nenhuma tarefa encontrada para este filtro"
+      });
+    }
+  });  
+}
+
 exports.listarPorId = (req, res) => {
 
   const id = req.params.id;
@@ -52,6 +93,7 @@ exports.listarPorId = (req, res) => {
 
   conexao.query(query, [id], (err, rows) => {
     if (err) {
+      console.log(err);
       res.status(500);
       res.json({
         message: "Internal Server Error"
@@ -79,6 +121,7 @@ exports.inserir = (req, res) => {
 
   conexao.query(query, [tarefa.descricao, tarefa.data, tarefa.realizado], (err, rows) => {
     if (err) {
+      console.log(err);
       res.status(500);
       res.json({
         message: "Internal Server Erro"
@@ -103,6 +146,7 @@ exports.alterar = (req, res) => {
   const query = 'update tarefas set descricao = ?, data = ?, realizado = ? where id = ?';
   conexao.query(query, [tarefa.descricao, tarefa.data, tarefa.realizado, tarefa.id], (err, rows) => {
     if (err){
+      console.log(err);
       res.status(500);
       res.json({
         message: "Internal Server Erro"
@@ -128,6 +172,7 @@ exports.deletar = (req, res) => {
   const query = 'delete from tarefas where id = ?';
   conexao.query(query, [id], (err, rows) => {
     if (err){
+      console.log(err);
       res.status(500);
       res.json({
         message: "Internal Server Erro"
