# server/routes/tarefaRouter.js
@@ -4,6 +4,7 @@ const tarefaController = require('../controllers/tarefaController');
 
 router.get('/', tarefaController.listarTodos);
 router.get('/f/:descricao?', tarefaController.listarPorDescricao);
+router.get('/p/:pagina/f/:descricao?', tarefaController.listarPorDescricaoPaginado);
 router.get('/:id', tarefaController.listarPorId);
 router.post('/', tarefaController.inserir);
 router.put('/:id', tarefaController.alterar);
